fix: 계산 오류 수정