@@ -4,18 +4,18 @@ import enumerate.menu.MenuGroup;
 
 import java.time.DayOfWeek;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 
 import static enumerate.event.EventValue.NO_EVENT_VALUE;
 import static enumerate.event.EventValue.WEEK_DISCOUNT_VALUE;
-import static enumerate.menu.MenuGroup.DESSERT;
-import static enumerate.menu.MenuGroup.MAIN;
+import static enumerate.menu.MenuGroup.*;
 import static java.time.DayOfWeek.*;
 
 public enum WeekEvent {
     WEEKDAY(List.of(SUNDAY, MONDAY, TUESDAY, WEDNESDAY, THURSDAY), DESSERT, WEEK_DISCOUNT_VALUE.get()),
-    WEEKEND(List.of(FRIDAY, SATURDAY), MAIN, WEEK_DISCOUNT_VALUE.get());
+    WEEKEND(List.of(FRIDAY, SATURDAY), MAIN, WEEK_DISCOUNT_VALUE.get()),
+    INVALID(Collections.emptyList(),INVLID,NO_EVENT_VALUE.get());
 
     private final List<DayOfWeek> dayOfWeeks;
     private final MenuGroup menuGroup;
@@ -35,9 +35,10 @@ public enum WeekEvent {
                 .orElse(NO_EVENT_VALUE.get());
     }
 
-    public static Optional<WeekEvent> getWeekEventKind(DayOfWeek dayOfWeek) {
+    public static WeekEvent getWeekEventKind(DayOfWeek dayOfWeek) {
         return Arrays.stream(values())
                 .filter(weekEvent -> weekEvent.dayOfWeeks.contains(dayOfWeek))
-                .findAny();
+                .findAny()
+                .orElse(INVALID);
     }
 }
